--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Login Firebase</string>
+    <string name="app_name">Login To Firebase</string>
     
     <string name="Login">Log in</string>
     <string name="email">email</string>
@@ -7,7 +7,7 @@
     <string name="Hello">Hello,</string>
     <string name="Change_password">Change password</string>
     <string name="new_password">new password</string>
-    <string name="type_again">type_again</string>
+    <string name="type_again">type again</string>
     <string name="submit">submit</string>
 
 </resources>
